--- a/trunk/comanda/ComandaRestaurante/app/src/main/res/layout/activity_login.xml
+++ b/trunk/comanda/ComandaRestaurante/app/src/main/res/layout/activity_login.xml
@@ -56,7 +56,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/txtMessageLogin"
+                android:id="@+id/viewMessageLogin"
                 android:layout_gravity="center_horizontal" />
 
         </LinearLayout>
