--- a/trunk/comanda/ComandaRestaurante/app/src/main/res/layout/app_bar_dash_board_restaurante.xml
+++ b/trunk/comanda/ComandaRestaurante/app/src/main/res/layout/app_bar_dash_board_restaurante.xml
@@ -4,14 +4,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="true"
-    tools:context=".CadastroProduto">
+    tools:context="br.com.ffit.comanda.activity.DashBoardRestauranteActivity">
 
     <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
         android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
 
+        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
+            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />
+
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_cadastro_produto" />
+    <include layout="@layout/content_dash_board_restaurante" />
 
     <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
