--- a/trunk/comanda/ComandaRestaurante/app/src/main/res/layout/content_dash_board_restaurante.xml
+++ b/trunk/comanda/ComandaRestaurante/app/src/main/res/layout/content_dash_board_restaurante.xml
@@ -8,6 +8,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_dash_board_restaurante"
-    tools:context="br.com.ffit.comanda.activity.DashBoardRestauranteActivity">
+    tools:context="br.com.ffit.comanda.activity.DashBoardRestauranteActivity"
+    android:id="@+id/dashboardContainer">
 
 </RelativeLayout>
