--- a/ComandaRestaurante/app/src/main/res/layout/produto_item.xml
+++ b/ComandaRestaurante/app/src/main/res/layout/produto_item.xml
@@ -16,6 +16,14 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="preco"
         android:id="@+id/produtoPrecoView"
+        android:layout_gravity="center_horizontal" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="X"
+        android:id="@+id/btnExcluirProduto"
         android:layout_gravity="right" />
 
     <TextView
