--- a/trunk/comanda/ComandaCliente/app/src/main/res/layout/fragment_produto_list.xml
+++ b/trunk/comanda/ComandaCliente/app/src/main/res/layout/fragment_produto_list.xml
@@ -8,39 +8,18 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="top">
-
-        <EditText
-            android:layout_width="300px"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/inputProdutoIncluirNome" />
-
-        <EditText
-            android:layout_width="200px"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/inputProdutoIncluirPreco"
-            android:layout_gravity="center_horizontal" />
+        android:layout_gravity="top"
+        android:weightSum="1">
 
         <Button
-            style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="+"
-            android:id="@+id/btnIncluirProduto"
-            android:layout_gravity="right" />
-
-        <EditText
-            android:layout_width="300px"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:id="@+id/inputProdutoIncluirDescricao" />
+            android:text="Abrir Conta"
+            android:id="@+id/btnAbrirConta"
+            android:layout_gravity="center_horizontal" />
 
         <ListView android:id="@android:id/list" android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+            android:layout_height="match_parent" />
     </LinearLayout>
 
 </FrameLayout>
