--- a/trunk/comanda/ComandaCliente/app/src/main/res/menu/activity_dash_board_restaurante_drawer.xml
+++ b/trunk/comanda/ComandaCliente/app/src/main/res/menu/activity_dash_board_restaurante_drawer.xml
@@ -3,7 +3,9 @@
 
     <group android:checkableBehavior="single">
         <item android:id="@+id/nav_produto" android:icon="@android:drawable/ic_menu_camera"
-            android:title="Lista de Restaurantes" />
+            android:title="Restaurantes" />
+        <item android:id="@+id/nav_conta" android:icon="@android:drawable/ic_lock_idle_low_battery"
+            android:title="Contas" />
     </group>
 
     <item android:title="Conta">
