--- a/ComandaCliente/app/src/main/res/layout/fragment_restaurante_list.xml
+++ b/ComandaCliente/app/src/main/res/layout/fragment_restaurante_list.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.ffit.comanda.activity.fragment.ProdutoFragment_">
+    tools:context="br.com.ffit.comanda.activity.fragment.ProdutoFragment_"
+    tools:showIn="@layout/refs">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
