--- a/trunk/comanda/ComandaCliente/app/src/main/res/layout/app_bar_dash_board_restaurante.xml
+++ b/trunk/comanda/ComandaCliente/app/src/main/res/layout/app_bar_dash_board_restaurante.xml
@@ -4,16 +4,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="true"
-    tools:context="br.com.ffit.comanda.activity.DashBoardClienteActivity"
-    tools:showIn="@layout/activity_dash_board_restaurante">
+    tools:context="br.com.ffit.comanda.activity.DashBoardClienteActivity">
 
     <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
         android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
             android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay">
 
+
+            <ImageButton
+                android:layout_width="64px"
+                android:layout_height="64px"
+                android:background="@drawable/ic_bell"
+                android:layout_gravity="right"
+                android:id="@+id/imageButton" />
+
+       </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_dash_board_restaurante" />
