--- a/trunk/comanda/ComandaCliente/app/src/main/res/layout/content_conta.xml
+++ b/trunk/comanda/ComandaCliente/app/src/main/res/layout/content_conta.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/app_bar_dash_board_restaurante"
-    tools:context="br.com.ffit.comanda.activity.DashBoardClienteActivity"
-    android:id="@+id/dashboardContainer">
+    tools:showIn="@layout/fragment_conta"
+    tools:context="br.com.ffit.comanda.activity.fragment.ContaFragment_"
+    android:id="@+id/contaContainer">
 
 </RelativeLayout>
