--- a/ComandaCliente/app/src/main/res/layout/activity_main.xml
+++ b/ComandaCliente/app/src/main/res/layout/activity_main.xml
@@ -7,4 +7,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="br.com.ffit.comanda.activity.MainActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="COMANDA"
+        android:id="@+id/splashTxt"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="50dp" />
 </RelativeLayout>
