--- a/trunk/comanda/ComandaCliente/app/src/main/res/layout/content_conta.xml
+++ b/trunk/comanda/ComandaCliente/app/src/main/res/layout/content_conta.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.view.ViewPager
-    android:id="@+id/contaContainer"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:showIn="@layout/fragment_conta"
+    tools:context="br.com.ffit.comanda.activity.fragment.ContaFragment_"
+    android:id="@+id/contaContainerLayout">
+    <android.support.v4.view.ViewPager
+        android:id="@+id/contaContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android" />
+
+</RelativeLayout>
