--- a/ComandaCliente/app/src/main/res/layout/fragment_contas_list.xml
+++ b/ComandaCliente/app/src/main/res/layout/fragment_contas_list.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.ffit.comanda.activity.fragment.MesaFragment_"
+    tools:context="br.com.ffit.comanda.activity.fragment.ContasFragment_"
     tools:showIn="@layout/refs">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -11,11 +11,10 @@
         android:layout_height="match_parent"
         android:layout_gravity="top">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Fechar Conta"
-            android:id="@+id/btnFecharConta" />
+        <ListView android:id="@android:id/list" android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
     </LinearLayout>
 
 </FrameLayout>
