--- a/ComandaCliente/app/src/main/res/values/refs.xml
+++ b/ComandaCliente/app/src/main/res/values/refs.xml
@@ -8,6 +8,7 @@
     http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
     -->
     <item name="fragment_produto" type="layout">@layout/fragment_produto_list</item>
+    <item name="fragment_contas" type="layout">@layout/fragment_contas_list</item>
     <item name="fragment_restaurante" type="layout">@layout/fragment_restaurante_list</item>
 
 </resources>
